change ebooks link location

--- a/frontend/templates/partials/header.html
+++ b/frontend/templates/partials/header.html
@@ -22,8 +22,7 @@
                         </a>
                         <ul class="submenu">                            
                             <li><a href="/alimentacion">Asesoramiento individualizado</a></li>
-                            <li class="oculto"><a href="#recetas">Recetas</a></li>
-                            <li><a href="/ebooks">Ebooks</a></li>
+                            <li class="oculto"><a href="#recetas">Recetas</a></li>                            
                             <li><a href="/recetas">Recetas</a></li>
                         </ul>
                     </li>
@@ -56,6 +55,9 @@
                     </li>
                     <li>
                         <a href="/eventos-disponibles">Próximos eventos</a>
+                    </li>
+                    <li>
+                        <a href="/ebooks">Ebooks</a>
                     </li>
                     
                 </ul>
